# HustCProgramming

./: README.md  U201714739金修旭.docx  《C语言程序设计》实验内容.docx  《C语言程序设计》课程实验报告规范示例.docx  实验2 流程控制实验doc.doc  实验4 编译预处理.doc  实验5 数组实验.docx  实验6  指针实验.doc  实验7  结构与联合实验.doc  实验8 文件实验.docx
workcode/: CMakeLists.txt
workcode/1st/: 1_1.c  1_2.c  1_31.c  1_32.c  1_33.c  CS1708_U201714739_金修旭.docx
workcode/2th/: 2_1.c  2_2.c  2_22.c  2_31.c  2_32.c  2_33.c  2_34.c  2_4.c  CS1708_U201714739_金修旭.docx  tempCodeRunnerFile.c
workcode/3th/: 3_1.c  3_2.c  3_3.c  3_32.c  3_41.c  3_42.c  CS1708_U201714739_金修旭.docx
workcode/3th/3_31/: 3_31.c  CMakeLists.txt
workcode/3th/3_5/: CMakeLists.txt  file.h  file1.c  file2.c
workcode/4th/: 4_1.c  4_2.c  4_3.c  4_41.c  4_42.c  U201714739_金修旭.docx
workcode/5th/: 5_1.c  5_2.c  5_21.c  5_22.c  5_23.c  5_24.c  5_25.c  5_27.c  U201714739_金修旭.docx  tempCodeRunnerFile.c
workcode/6th/: 6_1.c  6_2.c  6_3.c  6_4.c  U201714739_金修旭.docx  tempCodeRunnerFile.c
workcode/6th/6_6/: 6_6.c  CMakeLists.txt
workcode/6th/6_7/: CMakeLists.txt  tempCodeRunnerFile.c
workcode/6th/6_8/: CMakeLists.txt  main.c  tempCodeRunnerFile.c
workcode/7th/: U201714739_金修旭.docx
workcode/7th/7_1/: CMakeLists.txt  main.c
workcode/7th/7_2/: CMakeLists.txt  main.c
workcode/7th/7_3/: CMakeLists.txt  main.c
workcode/7th/7_4/: CMakeLists.txt  LinkedList.h  function.c  main.c
workcode/8th/: U201714739_金修旭.docx
workcode/8th/8_1/: CMakeLists.txt  main.c
workcode/8th/8_2/: CMakeLists.txt  main.c
workcode/8th/8_21/: CMakeLists.txt  main.c
workcode/8th/8_3/: main.c  (+2 more)
